# predictables

./: .dockerignore  .env  .flake8  .gitignore  .gitmodules  .isort.toml  .mypy.ini  .prettierrc  .ruff.toml  CORRELATIONtesting.ipynb  Cargo.toml  Dockerfile  README.md  asttokens-2.4.1-py2.py3-none-any.whl:Zone.Identifier  blinker-1.7.0-py3-none-any.whl:Zone.Identifier  build-rye  cancer_test.parquet  cancer_train.csv  cancer_train.parquet  cancer_val.parquet  cancerdf.parquet  cf_exp_cols.sql  cf_exp_cols.xlsx  cols.xlsx  dev_univariate.ipynb  embedding_model_updated.ipynb  feature_selector.py  feature_selector_constants.py  feature_selector_helpers.py  final_naics_data.parquet  get-uv  install_fonts.zsh  log.json  macro  old_requirements.txt  package-lock.json  package.json  predictables.db  predictables.db.wal  pyproject.toml  (+21 more)
.devcontainer/: Dockerfile-dev  compose.yml  devcontainer.json  install_code_server  py-alpine.Dockerfile
.github/old-workflows/: generate-badges.yml
.github/workflows/: bandit.yml  codeql.yml  create-mypy-report.yml  defender-for-devops.yml  generate-badges.yml  multiple-python-versions-3-9-to-3-11.yml  multiple-python-versions-3-9-to-3-12.yml  ossar.yml  pyre.yml  pysa.yml  python-app.yml  python-package.yml  semgrep.yml  single-python-version-check.yml  sphinx_docs_to_gh_pages.yml
.trunk/: trunk.yaml
.trunk/configs/: .flake8  .mypy.ini  ruff.toml
PredicTables/: package.json  requirements.txt  setup.py
PredicTables/PCA/: PCA.py
PredicTables/PCA/src/: __init__.py  bootstrap_pca.py  create_biplot.py  create_loading_plot.py  create_scree_plot.py  perform_pca.py  preprocessing.py  select_principal_components.py  testing.ipynb
PredicTables/Univariates/: BinaryTarget.py  ExcelEDA.py  FeatureEngineering.py  __init__.py  plots.py
PredicTables/Univariates/src/: __init__.py
PredicTables/catboost_info/: catboost_training.json  time_left.tsv
PredicTables/corr/rpt/: __init__.py  report.py
PredicTables/corr/src/: __init__.py  bin_bin.py  bin_cat.py  cat_cat.py  correlation_analysis.py  cts_bin.py  cts_cat.py  cts_cts.py  data_type_id.py  pearson.py  point_biserial.py  predictor_target_corr.py
PredicTables/corr/tests/: OLD_test_pbc.py  test_cts_cts.py  test_pearson.py
PredicTables/encoding/src/: __init__.py  fourier_encoding.py  mean_encoding.py
PredicTables/encoding/tests/: test_mean_encoding.py
PredicTables/impute/: IterativeRF.py  ModelImputer.py  testing.ipynb
PredicTables/impute/src/: __init__.py  main.py  (+12 more)
PredicTables/lookups/: BaseLookup.py  date_lookup.py
PredicTables/model/: __init__.py
PredicTables/nlp/: Bert.py
PredicTables/src/: _utils.py  correlation_matrix.py  eigenvalue_analysis.py  outliers.py  predictables-testing.ipynb  singular_value_decomp.py  svd.ipynb  tukeys_fences.py  variance_inflation_factor.py
PredicTables/tests/: __init__.py  test_correlation_matrix.py  test_eigenvalue_analysis.py  test_utils.py  test_variance_inflation_factor.py
PredicTables/tuning/: testing.ipynb
PredicTables/univariate/: BaseModel.py  BinaryTarget.py  FeatureEngineering.py  FeatureSelection.py  OLD BinaryTarget.py  SingleUnivariate.py  __init__.py  _feature_engineering_params.py  plots.py
PredicTables/util/: __init__.py
coverage/: coverage.json
docs/: api.rst  conf.py  corr.rst  index.rst  usage.rst
docs/.doc-env/: pyvenv.cfg
mypy-report/: index.html
predictables/: __init__.py  backward_stepwise.py  census-data-dev.ipynb  config.py  dev_ts_encoding.ipynb  duck_db.py  embedding_model.ipynb  fit_catboost_time_series.py  logging.py  logit_transform.py  mean_encoding.py  package-lock.json  requirements.txt  setup.py  synthetic.parquet  time_series_encoding.py
predictables-ui/: .prettierrc  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
predictables-ui/app/: globals.css  interfaces.tsx  layout.tsx  page.tsx
predictables-ui/components/: Accordion.tsx  Button.tsx  CloseButton.tsx  Drawer.tsx  Dropdown.tsx  FileImport.tsx  Heading.tsx  Logo.tsx  Navbar.tsx  NavbarButtons.tsx  NavbarDaisy.tsx  Table.tsx
predictables-ui/data/: bc.json  breast_cancer.parquet  california_housing.parquet  navbarData.tsx  sidebarData.tsx
predictables-ui/enums/: ButtonTypes.tsx  NavItem.tsx
predictables-ui/models/: DataSeries.tsx  DataTable.jsx  KeyboardMap.tsx  Table.tsx
predictables-ui/utils/: extract.ts
predictables/.trunk/: trunk.yaml
predictables/app/: Predictables.py  __init__.py  app.py  constants.py  plot_src.py
predictables/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
predictables/core/: _PredicTables.py  __init__.py  config.py
predictables/corr/: Corr.py  __init__.py  _corr.ipynb  _corr.py
predictables/encoding/: __init__.py  _lagged_mean_encoding.py
predictables/feature_selection/: __init__.py
predictables/impute/: ModelImputer.py  _ModelImputer.py  __init__.py
predictables/lookups/: _BaseLookup.py  _date_lookup.py
predictables/model/: __init__.py
predictables/naics_cd_embedding/: __init__.py  _config.py  _data.py  _defaults.py  _early_stopper.py  _early_stopping.py  _model.py  _synthetic_data_gen.py  synthetic-data-req.md  total.py  train.py
predictables/nlp/: _Bert.py
predictables/pca/: PCA.py  PCA_.py  _PCA.py  __init__.py
predictables/shap/: _shap.py
predictables/src/: _correlation_matrix.py  _eigenvalue_analysis.py  _outliers.py  _singular_value_decomp.py  _tukeys_fences.py  _utils.py  _variance_inflation_factor.py  correlation_matrix.py  eigenvalue_analysis.py  outliers.py  predictables-testing.ipynb  singular_value_decomp.py  svd.ipynb  tukeys_fences.py  variance_inflation_factor.py
predictables/tests/: test_fit_catboost_time_series.py  test_logit_transform.py  test_pca.py
predictables/tuning/: testing.ipynb
predictables/univariate/: BaseModel.py  BinaryTarget.py  SingleUnivariate.py  Univariate.py  _BaseModel.py  _BaseModel_2.py  _BinaryTarget.py  _SingleUnivariate.py  _Univariate.py  _Univariate_2.py  __init__.py  _feature_engineering_params.py  plots.py
predictables/util/: __init__.py
src/: lib.rs
src/predictables/: __init__.py
(+1601 files in other folders)
