[project]
name = "predictables"
version = "0.0.1"
description = "A library for creating predictable objects"
readme = "README.md"
license = "MIT"
keywords = [
  "predictable",
  "object",
  "mock",
  "stub",
  "fake",
  "test",
  "testing",
  "unittest",
  "pytest",
  "mocking",
  "stubbing",
  "faking",
  "mocks",
  "stubs",
  "fakes",
  "unittests",
  "pytests",
]
authors = [{ name = "Andy Weaver" }]
maintainers = [{ name = "Andy Weaver" }]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.coverage.run]
source = ["predictables"]

[tool.coverage.report]
precision = 1
sort = "Miss"

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.json]
output = "coverage/coverage.json"